--- a/page2.html
+++ b/page2.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galería de la Tecnología - Página 2</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Galería de la Tecnología</h1>
     <div id="div_img">
-        <img src="img2.jpg" alt="Sala de servidores" class="image"/>
+      <img src="img2.jpg" alt="Sala de servidores" class="image" />
     </div>
     <h2>Lorem descripción</h2>
     <p>Estas conexiones, en un servidor, guardan mucha información.</p>
-    <a href="page1.html" title="Imagen anterior" class="link-button">&lt;= Imagen anterior</a>
-</body>
-
+    <a href="index.html" title="Imagen anterior" class="link-button"
+      >&lt;= Imagen anterior</a
+    >
+  </body>
 </html>
