agrego strong a los h1

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Galería de la Tecnología</h1>
+    <strong><h1>Galería de la Tecnología</h1></strong>
     <div id="div_img">
       <img src="img2.jpg" alt="Sala de servidores" class="image" />
     </div>
