--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Galería de la Tecnología</h1>
+    <strong></strong><h1>Galería de la Tecnología</h1> </strong>
     <div id="div_img">
         <img src="img1.jpg" alt="Imagen de la NASA" class="image"/>
     </div>    
